--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     victoire_cms.twig.widget_render_manager:
-        class: Victoire\RenderBundle\Widget\Manager\WidgetRenderManager
+        class: Victoire\Widget\RenderBundle\Widget\Manager\WidgetRenderManager
         arguments: [@service_container]
 
     widget_render_manager:
