refactor cms_bundle to core_bundle

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -1,4 +1,4 @@
-victoire_cms:
+victoire_core:
     widgets:
         render:
             class: "Victoire\\Widget\\RenderBundle\\Entity\\WidgetRender"
