--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -1,5 +1,5 @@
 victoire_core:
     widgets:
-        render:
+        Render:
             class: "Victoire\\Widget\\RenderBundle\\Entity\\WidgetRender"
-            name: render
+            name: Render
