Adds a custom path filter to be able to show static content when the entity does not exist in a BEPP

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     victoire_core.widget_render_content_resolver:
-        class: Victoire\Bundle\WidgetBundle\Resolver\BaseWidgetContentResolver
+        class: Victoire\Widget\RenderBundle\Resolver\WidgetRenderContentResolver
         tags:
             - { name: victoire_widget.widget_content_resolver, alias: Render }
     #alias to the entity
