--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "appventus/render-widget",
+    "name": "friendsofvictoire/render-widget",
     "type": "symfony-bundle",
     "description": "Victoire Cms Render component",
     "keywords": ["cms", "victoire", "render"],
