--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -10,5 +10,5 @@ services:
     victoire.widget.form.render:
         class: Victoire\Widget\RenderBundle\Form\WidgetRenderType
         tags:
-            - { name: form.type , alias: victoire_widget_form_render}
+            - { name: form.type }
 
