--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,34 @@
 {
-    "name"             : "friendsofvictoire/render-widget",
-    "type"             : "symfony-bundle",
-    "description"      : "Victoire DCMS Render widget",
-    "keywords"         : [
+    "name": "friendsofvictoire/render-widget",
+    "type": "symfony-bundle",
+    "description": "Victoire DCMS Render widget",
+    "keywords": [
         "DCMS",
         "Victoire",
         "widget",
         "FriendsofVictoire",
-        "FoV",
-        "Dynamic",
-        "CMS",
         "Render"
     ],
-    "homepage"         : "http://victoire.io",
-    "license"          : "MIT",
-    "authors"          : [
+    "license": "MIT",
+    "authors": [
         {
             "name" : "Paul Andrieux",
             "email": "paul@victoire.io"
         }
     ],
-    "require"          : {
-        "php"                     : ">=5.3.3",
-        "symfony/framework-bundle": "~2.3",
-        "victoire/victoire"       : "~1.3"
+    "require": {
+        "php": ">=5.5.9",
+        "symfony/framework-bundle": "~2.8|~3.0",
+        "victoire/victoire": "~1.5"
     },
-    "autoload"         : {
+    "autoload": {
         "psr-0": {
             "Victoire\\Widget\\RenderBundle": ""
         }
     },
     "minimum-stability": "dev",
-    "target-dir"       : "Victoire/Widget/RenderBundle",
-    "extra"            : {
+    "target-dir": "Victoire/Widget/RenderBundle",
+    "extra": {
         "branch-alias": {
             "dev-master": "1.3.x-dev"
         }
