disable cache for this widget

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -3,3 +3,4 @@ victoire_core:
         Render:
             class: "Victoire\\Widget\\RenderBundle\\Entity\\WidgetRender"
             name: Render
+            cache: false
