--- a/composer.json
+++ b/composer.json
@@ -19,18 +19,12 @@
     "require": {
         "php": ">=5.5.9",
         "symfony/framework-bundle": "~2.8|~3.0",
-        "victoire/victoire": "~1.5"
+        "victoire/victoire": ">=2.0.0"
     },
     "autoload": {
         "psr-0": {
             "Victoire\\Widget\\RenderBundle": ""
         }
     },
-    "minimum-stability": "dev",
-    "target-dir": "Victoire/Widget/RenderBundle",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.5.x-dev"
-        }
-    }
+    "target-dir": "Victoire/Widget/RenderBundle"
 }
