--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=5.5.9",
         "symfony/framework-bundle": "~2.8|~3.0",
-        "victoire/victoire": ">=2.0.0"
+        "victoire/victoire": ">=2.0.0 | ~3.0"
     },
     "autoload": {
         "psr-0": {
