--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,11 @@
 {
     "name": "victoire/render-widget",
     "type": "symfony-bundle",
-    "description": "Victoire DCMS Render widget",
+    "description": "Victoire Render widget",
     "keywords": [
-        "DCMS",
         "Victoire",
-        "widget",
-        "FriendsofVictoire",
-        "Render"
+        "Render",
+        "Widget"
     ],
     "license": "MIT",
     "authors": [
@@ -17,9 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "symfony/framework-bundle": "~2.8|~3.0",
-        "victoire/victoire": ">=2.0.0 | ~3.0"
+        "victoire/victoire": "~2.3 | ~3.0"
     },
     "autoload": {
         "psr-0": {
