--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -1,6 +1,6 @@
 victoire_core:
     widgets:
         Render:
-            class: "Victoire\\Widget\\RenderBundle\\Entity\\WidgetRender"
+            class: Victoire\Widget\RenderBundle\Entity\WidgetRender
             name: Render
             cache: false
