--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -4,6 +4,8 @@ services:
         parent: victoire_widget.base_widget_content_resolver
         tags:
             - { name: victoire_widget.widget_content_resolver, alias: Render }
+        calls:
+            - [setRequestStack, ["@request_stack"]]
     #alias to the entity
     victoire.widget.render:
         class: Victoire\Widget\RenderBundle\Entity\WidgetRender
